# CUDAwnyEdgeDetection

./: CMakeLists.txt  README.md
Source/: Kernel.cu  Main.cpp  Pch.h
